Raise ArgumentError in IO#sysread on Windows when given a negative length

Fixes [Bug #18880]